--- a/style.css
+++ b/style.css
@@ -22,13 +22,24 @@ body {
     background-position: center;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
+    margin-bottom: 35px;
 }
 
 .title {
 
     font-size: 24px;
     font-weight: 900;
-    color:hsl(223, 47%, 23%)
+    color:hsl(223, 47%, 23%);
+    margin-bottom: 25px;
+}
+
+.description-text {
+
+    font-size: 18px;
+    color:hsl(224, 23%, 55%);
+    margin-left: 15%;
+    margin-right: 15%;
+    
 }
 
 .attribution { font-size: 11px; text-align: center; }
